expense report api init and updated
